--- a/src/pages/aside/chooseSize/choose-size.css
+++ b/src/pages/aside/chooseSize/choose-size.css
@@ -13,7 +13,10 @@ ul li {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #ccc;
+    /* background: #ccc; */
+    background: #1a94bc;
+    color:white;
+    font-weight: 500;
     text-align: center;
     line-height: 40px;
     margin-right: 8px;
