--- a/src/pages/aside/chooseSize/choose-size.css
+++ b/src/pages/aside/chooseSize/choose-size.css
@@ -13,9 +13,9 @@ ul li {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    /* background: #ccc; */
-    background: #1a94bc;
-    color:white;
+    background: #ccc;
+    /* background: #1a94bc; */
+    color:#666;
     font-weight: 500;
     text-align: center;
     line-height: 40px;
