--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-
 .App {
   text-align: center;
-  background-color:#eef7f2;
+  /* background-color:#eef7f2; */
+  background:#e4dfd7;
+  /* width: 100%; */
   
   
 }
-
 .header {
   background-color: #282c34;
   height: 100px;
