--- a/src/pages/article/select/select.css
+++ b/src/pages/article/select/select.css
@@ -1,6 +1,7 @@
 .selectBox{
     display: flex;
     justify-content: space-between;
+    width: 95%;
 }
 .product-count,.order{
     font-size: 25px;
