解决结账清除购物车问题

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   background:#e4dfd7;
-  background-color: #1b4833;
+  /* background-color: #1b4833; */
   /* height: 2500px; */
 }
 
