--- a/src/pages/header/index.css
+++ b/src/pages/header/index.css
@@ -6,18 +6,24 @@
     font-size: calc(10px + 2vmin);
     color: white;
     width: 100%;
+    min-width: 1400px;
 }
 
 .shopCar {
     display: inline-block;
     height: 50px;
     width: 50px;
+  
 }
 
 .count {
-    position: relative;
-    left: -200px;
+    position:  fixed;
+    /* left: -200px; */
+    top:0px;
+    right: 200px;
     cursor: pointer;
+    
+
 }
 
 .shopCar:hover {
