--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
-  background:#e4dfd7;
-  /* background-color: #1b4833; */
-  /* height: 2500px; */
+  background:#e4dfd7!important;
+  
 }
 
 code {
