--- a/src/pages/header/index.css
+++ b/src/pages/header/index.css
@@ -6,25 +6,24 @@
     font-size: calc(10px + 2vmin);
     color: white;
     width: 100%;
-    min-width: 1400px;
+    min-width: 1400px!important;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99;
 }
 
 .shopCar {
     display: inline-block;
     height: 50px;
     width: 50px;
-    
-  
 }
 
 .count {
-    position:  fixed!important;
-    /* left: -200px; */
-    top:20px;
+    position: fixed!important;
+    top: 0px;
     right: 200px;
     cursor: pointer;
-    
-
 }
 
 .shopCar:hover {
@@ -38,4 +37,3 @@
     left: -190px;
     top: -10px;
 }
-
