--- a/src/pages/header/index.css
+++ b/src/pages/header/index.css
@@ -7,11 +7,7 @@
     color: white;
     width: 100%;
     min-width: 1400px!important;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 99;
-}
+ }
 
 .shopCar {
     display: inline-block;
@@ -20,10 +16,11 @@
 }
 
 .count {
-    position: fixed!important;
+    position: relative!important;
     top: 0px;
     right: 200px;
     cursor: pointer;
+   
 }
 
 .shopCar:hover {
